# rust-projects

./: README.md  docker-compose.yml
bittorrent-rs/: Cargo.toml  README.md
bittorrent-rs/src/: main.rs  torrentfile.rs
bittorrent-rs/src/torrentfile/: client.rs  p2p.rs  tracker.rs
blog-os/: Cargo.toml  README.md
blog-os/src/: main.rs
calcserv-rs/: Cargo.toml
ecs/: README.md
ecs/src/: main.rs  old_main.rs
fun_with_trees/: Cargo.toml
fun_with_trees/src/: lib.rs  tree.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
microservice-rs/: Cargo.toml  README.md
microservice-rs/src/: main.rs  models.rs  schema.rs
oxidized-algebra/: Cargo.toml
oxidized-algebra/src/: lib.rs
oxidized-algebra/src/linalg/: matrix.rs  mod.rs
parse-rs/: Cargo.toml
parse-rs/src/: bencode_parser.rs  main.rs
pngme/: Cargo.toml  README.md
pngme/src/: args.rs  chunk.rs  chunk_type.rs  commands.rs  main.rs  png.rs
rusty-caries/libs/neural-network/: Cargo.toml
rusty-caries/libs/neural-network/src/: lib.rs  neuron.rs
servers-services-apps/: README.md
servers-services-apps/scenario1/: Cargo.toml  notes.md
shorelark/: README.md
shorelark/www/: package-lock.json  webpack.config.js
tcp/: Dockerfile  README.md
tcp/trust/: Cargo.toml
tcp/trust/src/: main.rs
the-dangerous-way/: Cargo.toml  README.md
the-dangerous-way/.cargo/: config
the-dangerous-way/src/: C-nbody.rs  main.rs  safe-nbody.rs
too_many_linked_lists/src/: fifth.rs  first.rs  fourth.rs  lib.rs  miri-notes.rs  second.rs  sixth.rs  third.rs
trpl/: README.md
trpl/15_concurrency/: Cargo.toml
(+106 files in other folders)
