[package]
name = "lib-neural-network"
version = "0.1.0"
authors = ["Benni-Math <benediktjens.arnarsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
# thiserror = "1.0"

[dev-dependencies]
approx = "0.4"
